# cmn_template

./: .gitignore  README.md  openSourceliblist.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
poc/: README.MD
poc/arima/cpp/: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  build.ninja  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  meson.build  rules.ninja  test_arima
poc/arima/cpp/Testing/Temporary/: CTestCostData.txt
poc/arima/cpp/src/: arima.cpp  arima.hpp  test_arima.cpp
poc/arima/py/: arima_statsmodels.py
poc/scikit_build_core/c/: CMakeLists.txt  pyproject.toml  readme.md  skcdpure.c
poc/scikit_build_core/hello-pybind11/: CMakeLists.txt  MANIFEST.in  setup.py  tox.ini
poc/scikit_build_core/hello-pybind11/_skbuild/linux-x86_64-3.10/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  install_manifest.txt
poc/scikit_build_core/hello-pybind11/_skbuild/linux-x86_64-3.10/cmake-install/src/hello/: __init__.py
poc/scikit_build_core/hello-pybind11/src/hello/: hello_py.cpp
poc/scikit_build_core/hello-pybind11/src/hello_pybind11.egg-info/: PKG-INFO  SOURCES.txt
poc/scikit_build_core/hello-pybind11/tests/: test_hello_pybind11.py
poc/scikit_build_core/pybind11/: CMakeLists.txt  example.cpp  pyproject.toml  skcdemo.cpp
poc/skbuild_pybind11_cpp_cmake/: CMakeLists.txt  MANIFEST.in  README.md  readme.md  setup.py
poc/skbuild_pybind11_cpp_cmake/_skbuild/linux-x86_64-3.10/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  install_manifest.txt
poc/skbuild_pybind11_cpp_cmake/src/skbuild_pybind11_cpp_cmake.egg-info/: PKG-INFO  SOURCES.txt
