[tool.poetry]
name = "cmn_template"
version = "0.1.0"
description = "A Template Python+C Development Project Using DEV Container"
authors = []
package-mode = false
[tool.poetry.dependencies]
python = "^3.10.1"
pandas = "2.2.0"
saspy = "5.6"
flask = "3.0.2"
mysql-connector-python = "8.3.0"
python-dotenv = "1.0.1"
matplotlib="~3.8"
statsmodels="~0.14"
scikit-learn = "^1.5.2"
[tool.poetry.group.dev.dependencies]
sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"
pytest = "8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests/unit_tests", "tests/e2e_tests"]
addopts = "-v -s"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


