[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "skcdpure"
version = "0.1.0"
requires-python = ">=3.9"

#Notice that you do not include cmake, ninja, setuptools, or wheel in the requires list.
# Scikit-build-core will intelligently decide whether it needs cmake and/or ninja based on what versions are present in the environment 